<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.wildfly.glow</groupId>
        <artifactId>wildfly-glow-parent</artifactId>
        <version>1.0.0.Beta13-SNAPSHOT</version>
    </parent>

    <artifactId>wildfly-glow-openshift-deployment</artifactId>
    <packaging>pom</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <location.checkstyle.xml>../checkstyle/checkstyle.xml</location.checkstyle.xml>
    </properties>
    <modules>
        <module>api</module>
        <module>keycloak</module>
        <module>mariadb</module>
        <module>mysql</module>
        <module>postgresql</module>
        <module>amq-broker</module>
    </modules>
</project>